# youtuberrr

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  gemini.md  pyproject.toml
.github/workflows/: docker.yml
app/: config.py  main.py
app/routers/: download.py
app/schemas/: download.py
app/services/: youtube.py
app/templates/: base.html  download.html  index.html
tests/: test_download_api.py
