[project]
name = "youtuberrr"
version = "0.1.0"
description = "A simple web app to download YouTube videos."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litestar[jinja,standard]>=2.8.3",
    "yt-dlp>=2024.4.9",
    "uvicorn",
    "pydantic",
    "ruff",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
lint.select = ["E", "F", "I", "S"]
lint.ignore = []
lint.fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
lint.unfixable = []
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".hg", ".mypy_cache", ".nox", ".pants.d",
    ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", "__pypackages__", "_build",
    "buck-out", "build", "dist", "node_modules", "venv",
]
line-length = 120
target-version = "py313"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"conftest*"   = ["F403"]
"test_*.py"   = ["S"]
"tests.py"    = ["S"]
"*_test.py"   = ["S"]

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2
known-first-party   = ["app"]
section-order       = ["future", "standard-library", "third-party", "first-party", "local-folder"]
